# ml_design_book

./: README.md  pyproject.toml
ch02/: README.md  real-data.ipynb  synthetic-data.ipynb
ch03/: README.md  mf.py  naive-vs-ips.ipynb
ch04/: README.md  evaluate.py  loss.py  naive-vs-ips.ipynb  position-bias-effects.ipynb  theta-misspecification.ipynb  train.py  utils.py
ch05/: README.md  evaluate.py  loss.py  model.py  naive-vs-ips.ipynb  objective-misspecification.ipynb  train.py  utils.py
